# AI-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  sample_data.json  test.py
.github/workflow/: ci.yml
.github/workflows/: main.yml
app/: __init__.py  cache.py  history.py  main.py  memory_layer.py  routes.py  socket_manager.py  summarizer.py
app/annotation_graph/: annotated_graph.py  dfs_handler.py  neo4j_handler.py  schema_handler.py
app/galaxy/: GalaxyExecutor.py  Informer.py  file_converter.py  galaxy_prompts.py  tool_info.py
app/hypothesis_generation/: hypothesis.py
app/lib/: auth.py
app/llm_handle/: finetuned_model.py  llm_models.py  prompt.py
app/mem0/: main.py
app/prompts/: annotation_prompts.py  classifier_prompt.py  conversation_handler.py  dfs_prompt.py  galaxy_prompts.py  hypothesis_prompt.py  memory_prompt.py  pdf_prompt.py  prompts.py  rag_prompts.py  summarizer_prompts.py
app/rag/: qdrant.py  query.py  rag.py  save.py
app/services/: ai_assistant.py  annotation_service.py  dfs_traversal.py  graph_handler.py  helpers.py  llm_handler.py  llm_models.py  query_generator_pipeline.py  sample.py  schema_handler.py  summarizer.py
app/storage/: history.py  memory_layer.py  qdrant.py  sql_redis_storage.py  sqldb.py
config/: config.yaml  dfs_json_format.py  enhanced_schema.txt  preprossed_schema.txt  schema_config.yaml
helper/: access_token_generator.py
notebook/: classifier.ipynb
tests/: test_routes.py  test_routes_rag.py
