[tool.poetry]
name = "ai-assistant"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.51.0"
PyYAML = "^6.0.2"
numpy = "^2.1.2"
qdrant-client = "^1.12.1"
pandas = "^2.2.3"
neo4j = "^5.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
