[tool.poetry]
name = "ai-assistant"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.51.0"
PyYAML = "^6.0.2"
pandas = "^2.2.3"
neo4j = "^4.4"
biocypher = "^0.6.1"
scikit-learn = "^1.5.2"
qdrant-client = "^1.12.0"
autogen = "^0.3.1"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
